# OpenDC

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/: 1_Get_Started.md
examples/: CMakeLists.txt
src/: oc_array.h  oc_image.h
